test/conformance/kuttl/verifyImages/clusterpolicy/standard/keyless-rekor-public-key/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyless-rekor-public-key
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
